--- a/LGM_Task-1/index.html
+++ b/LGM_Task-1/index.html
@@ -188,32 +188,32 @@
             <div class="grid-container">
                 <div class="item1">
                     <img src="./assets/person1.jpg" alt="">
-                    <h3>MATT ALEX</h3>
-                    <p>creative head</p>
+                    <div class="names"><h3>MATT ALEX</h3></div>
+                    <p>Creative head</p>
                 </div>
                 <div class="item1">
                     <img src="./assets/person2.jpg" alt="">
-                    <h3>CHRIP PHILIPS</h3>
+                    <div class="names"><h3>CHRIP PHILIPS</h3></div>
                     <p>Art Direction</p>
                 </div>
                 <div class="item1">
                     <img src="./assets/person3.jpg" alt="">
-                    <h3>JIMMY SMITH</h3>
+                    <div class="names"><h3>JIMMY SMITH</h3></div>
                     <p>Senior Designer</p>
                 </div>
                 <div class="item1">
                     <img src="./assets/person4.jpg" alt="">
-                    <h3>SARA JHONSON</h3>
+                    <div class="names"><h3>SARA JHONSON</h3></div>
                     <p>Junior developer</p>
                 </div>
                 <div class="item1">
                     <img src="./assets/person5.jpg" alt="">
-                    <h3>KAHTERIN</h3>
+                    <div class="names"><h3>KAHTERIN</h3></div>
                     <p>Seo Monster</p>
                 </div>
                 <div class="item1">
                     <img src="./assets/person6.jpg" alt="">
-                    <h3>ALEXA BENNET</h3>
+                    <div class="names"><h3>ALEXA BENNET</h3></div>
                     <p>Senior Designer</p>
                 </div>
             </div>
